# product_coding_tool

./: .env.example  .gitignore  README.md  constraints-notebook.txt  pyproject.toml  requirements-notebook.txt  requirements.txt
docs/: product_bulk_production_hardening.md  product_coding_tool.md  product_level_bulk_coding.md
examples/: features.json  pg_feature_coding_input.csv  pg_name_mapping_audit.csv  product_batch_input_canonical_pg_names.csv  product_batch_input_with_pg_name.csv
notebooks/: run_product_coding_agent.ipynb
scripts/: install_ipykernel.py  run_product_coding.py
src/product_coding_tool/: __init__.py  batch.py  cli.py  config.py  kernel.py  log.py  models.py  prompts.py
src/product_coding_tool/agent/: artifact_quality_gate.py  coder.py  json_utils.py  orchestrator.py  planner.py  product_bulk_coder.py  product_level.py  retriever.py  review_gate.py  visual.py  worker_pool.py
src/product_coding_tool/artifacts/: context.py  contract.py  evidence_packet.py  image_loader.py  locator.py  navigator.py  reader.py
src/product_coding_tool/inputs/: __init__.py  product_batch.py
src/product_coding_tool/outputs/: audit.py  schemas.py  writer.py
src/product_coding_tool/rules/: models.py  pg_input.py  provider.py  validator.py
src/product_coding_tool/services/: llm.py
tests/: test_artifact_quality_gate.py  test_artifact_reader_quality.py  test_evidence_planner_latency_mode.py  test_feature_worker_pool_dynamic.py  test_llm_transport.py  test_pg_feature_input_provider.py  test_product_artifact_context.py  test_product_batch_coding_agent.py  test_product_batch_input_provider.py  test_product_bulk_coder.py  test_product_coding_agent_contract.py  test_product_coding_artifact_tools.py  test_product_coding_parallel.py  test_product_level_hardening.py  test_project_notebook_env.py
