[project]
name = "product-coding-tool"
version = "1.2.4"
description = "Standalone artifact-grounded, loop-engineered product feature coding agent with notebook-ready PDM production install. No web search, scraping runtime, or mandatory OpenAI SDK."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "TechDurablesToy" }]
keywords = ["product-coding", "artifact-grounded", "llm-agent", "azureml", "notebook"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core runtime
    "pydantic>=2.8,<3.0",
    "loguru>=0.7,<0.8",
    "python-dotenv>=1.0,<2.0",

    # Existing enterprise/Azure-compatible LLM service.
    # Direct httpx transport is default to avoid notebook/OpenAI-SDK import conflicts.
    "httpx>=0.27,<1.0",

    # Notebook-first runtime. Kept in base deps because AzureML/VS Code notebook is the primary execution path.
    "ipykernel==6.29.5",
    "ipython>=8.18,<9.0",
    "jupyter-client>=8.6,<9.0",
    "jupyter-core>=5.7,<6.0",
    "traitlets>=5.14,<6.0",
    "comm>=0.2,<0.3",
    "debugpy>=1.8,<2.0",
    "nest-asyncio>=1.6,<2.0",
    "pyzmq>=25,<27",
    "tornado>=6.4,<7.0",
    "matplotlib-inline>=0.1.7,<0.2.0",
    "pandas>=2.2,<2.3",

    # Jedi is pinned and disabled by project IPython config to avoid slow/hanging completion in notebooks.
    "jedi==0.19.1",
    "parso==0.8.4",
]

[project.optional-dependencies]
openai-sdk = [
    "openai==1.55.3",
]
test = [
    "pytest>=8.2,<9.0",
]
dev = [
    "pytest>=8.2,<9.0",
    "ruff>=0.5,<1.0",
]
notebook-ui = [
    "notebook>=7.2,<8.0",
    "jupyterlab>=4.2,<5.0",
]

[project.scripts]
product-code = "product_coding_tool.cli:main"
product-coding-install-kernel = "product_coding_tool.kernel:main"

[build-system]
requires = ["pdm-backend>=2.4"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
includes = ["src/product_coding_tool"]

[tool.pdm.scripts]
# Running `pdm install --prod` installs only project dependencies, then this hook
# registers the project Jupyter kernel. Use `PDM_SKIP_HOOKS=post_install` if a
# non-notebook CI image should skip kernel registration.
post_install = "python scripts/install_ipykernel.py"
code-product = "python scripts/run_product_coding.py"
install-kernel = "python scripts/install_ipykernel.py"
test = "pytest -q"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
