[project]
name = "product-coding-tool"
version = "1.4.0"
description = "Standalone artifact-grounded product feature coding agent with product-level bulk coding, bounded product/feature parallelism, cached scrape artifact context, artifact-quality reports, and scraper-compatible AzureOpenAI LLM client."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "TechDurablesToy" }]
keywords = ["product-coding", "artifact-grounded", "llm-agent", "azureml", "notebook"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core runtime
    "pydantic>=2.8,<3.0",
    "loguru>=0.7,<0.8",
    "python-dotenv>=1.0,<2.0",

    # Existing enterprise/Azure-compatible LLM service. The default runtime path
    # mirrors product_scrape_tool: AzureOpenAI SDK with azure_endpoint and azure_deployment.
    "httpx>=0.28.1,<1.0",
    "openai==1.55.3",

    # Notebook-first runtime. Kept in base deps because AzureML/VS Code notebook is the primary execution path.
    "ipykernel==6.29.5",
    "ipython>=8.18,<9.0",
    "jupyter-client>=8.6,<9.0",
    "jupyter-core>=5.7,<6.0",
    "traitlets>=5.14,<6.0",
    "comm>=0.2,<0.3",
    "debugpy>=1.8,<2.0",
    "nest-asyncio>=1.6,<2.0",
    "pyzmq>=25,<27",
    "tornado>=6.4,<7.0",
    "matplotlib-inline>=0.1.7,<0.2.0",
    "pandas>=2.2,<2.3",
    "openpyxl>=3.1,<4.0",
    "rich>=13.7,<14.0",
]

[project.scripts]
product-code = "product_coding_tool.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
]
